--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "graphql": "^16.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
