--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_SERVER_API_URL='http://localhost:8080/graphql'
-EXPO_PUBLIC_SERVER='http://localhost:8080'
+EXPO_PUBLIC_SERVER_API_URL='https://api.petproekt.ru/graphql'
+EXPO_PUBLIC_SERVER='https://api.petproekt.ru'
