--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0"
