--- a/client/package.json
+++ b/client/package.json
@@ -38,19 +38,21 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "graphql": "^16.10.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
